# speclite

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.github/workflows/scripts/: create-release-packages.sh
docs/: index.md  installation.md  upgrade.md
src/speclite_cli/: __init__.py
templates/: checklist-template.md  plan-template.md  review-template.md  spec-template.md  tasks-template.md
templates/commands/: constitution.md  implement.md  review.md  tasks.md
