[project]
name = "speclite-cli"
version = "0.0.5"
description = "SpecLite CLI. A lightweight tool to bootstrap your projects for Spec-Driven Development (SDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "platformdirs",
    "readchar",
]

[project.scripts]
speclite = "speclite_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/speclite_cli"]
[tool.hatch.build.targets.wheel.force-include]
"templates" = "speclite_cli/templates"
"scripts" = "speclite_cli/scripts"
